--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section>
       <div>
 
-        <img src="./img/sad.png" alt="Foto Eduardo" width="250" height="200">"
+        <img src="./img/sad.png" alt="Foto Eduardo" width="250" height="200">
 
     </div>
  </section>
